# surface-dial-linux

./: Cargo.toml  README.md
docs/: architecture.md
src/: config.rs  config_mode.rs  error.rs  fake_input.rs  focus_watcher.rs  main.rs
src/controller/: mod.rs
src/controller/controls/: dbus_mode.rs  media.rs  media_with_volume.rs  mod.rs  null.rs  paddle.rs  scroll.rs  scroll_mt.rs  volume.rs  zoom.rs
src/dial_device/: events.rs  mod.rs
