[package]
name = "surface-dial-daemon"
version = "0.2.0"
authors = ["Daniel Prilik <danielprilik@gmail.com>", "Charles McCrimmon <charles@specis.me.uk>"]
description = "A linux userspace controller for the microsoft surface dial"
edition = "2021"

[dependencies]
directories = "3.0"
evdev = "0.13"
hidapi = { version = "1.2.3", default-features = false, features = ["linux-shared-hidraw"] }
lazy_static = "1.4"
notify-rust = "4"
parking_lot = "0.11.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
signal-hook = "0.1.16"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
udev = "0.5"
zbus = { version = "4", features = ["tokio"] }